fixed broken image

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <article>
       <div class="testimonial flow style2">
         <div class="customer">
-          <img src="/images/image-jonathan.jpg" alt="image-jonathan">
+          <img src="images/image-jonathan.jpg" alt="image-jonathan">
           <div class="customer__info">
             <p class="customer__name">Jonathan Walters</p>
             <p class="customer__status">Verified Graduate</p>
