--- a/index.html
+++ b/index.html
@@ -1,84 +1,138 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Testimonials</title>
-</head>
-<body>
-  <main class="container">
-    <article>
-      <div class="testimonial flow style1 intro">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:wght@500;600&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <title>Testimonials</title>
+  </head>
+  <body>
+    <main class="container">
+      <!-- first testimonial -->
+      <article class="testimonial flow first">
         <div class="customer">
-          <img src="images/image-daniel.jpg" alt="image-daniel">
+          <img src="images/image-daniel.jpg" alt="image-daniel" />
           <div class="customer__info">
             <p class="customer__name">Daniel Clifford</p>
             <p class="customer__status">Verified Graduate</p>
           </div>
         </div>
-        <h2 class="testimonial__highlight">I received a job offer mid-course, and the subjects I learned were current, if not more so, in the company I joined. I honestly feel I got every penny’s worth.</h2>
-        <p class="testimonial__body">“ I was an EMT for many years before I joined the bootcamp. I’ve been looking to make a transition and have heard some people who had an amazing experience here. I signed up for the free intro course and found it incredibly fun! I enrolled shortly thereafter. The next 12 weeks was the best - and most grueling - time of my life. Since completing the course, I’ve successfully switched careers, working as a Software Engineer at a VR startup. ”</p>
-      </div>
-    </article>
-    <article>
-      <div class="testimonial flow style2">
+        <h2 class="testimonial__highlight">
+          I received a job offer mid-course, and the subjects I learned were
+          current, if not more so, in the company I joined. I honestly feel I
+          got every penny’s worth.
+        </h2>
+        <p class="testimonial__body">
+          “ I was an EMT for many years before I joined the bootcamp. I’ve been
+          looking to make a transition and have heard some people who had an
+          amazing experience here. I signed up for the free intro course and
+          found it incredibly fun! I enrolled shortly thereafter. The next 12
+          weeks was the best - and most grueling - time of my life. Since
+          completing the course, I’ve successfully switched careers, working as
+          a Software Engineer at a VR startup. ”
+        </p>
+      </article>
+
+      <!-- second testimonial -->
+      <article class="testimonial flow second">
         <div class="customer">
-          <img src="images/image-jonathan.jpg" alt="image-jonathan">
+          <img src="images/image-jonathan.jpg" alt="image-jonathan" />
           <div class="customer__info">
             <p class="customer__name">Jonathan Walters</p>
             <p class="customer__status">Verified Graduate</p>
           </div>
         </div>
-        <h2 class="testimonial__highlight">The team was very supportive and kept me motivated</h2>
-        <p class="testimonial__body">“ I started as a total newbie with virtually no coding skills. I now work as a mobile engineer for a big company. This was one of the best investments I’ve made in myself. ”</p>
-      </div>
-    </article>
-    <article>
-      <div class="testimonial flow style4">
+        <h2 class="testimonial__highlight">
+          The team was very supportive and kept me motivated
+        </h2>
+        <p class="testimonial__body">
+          “ I started as a total newbie with virtually no coding skills. I now
+          work as a mobile engineer for a big company. This was one of the best
+          investments I’ve made in myself. ”
+        </p>
+      </article>
+
+      <!-- third testimonial -->
+      <article class="testimonial flow third">
         <div class="customer">
-          <img src="images/image-jeanette.jpg" alt="image-jeanette">
+          <img src="images/image-jeanette.jpg" alt="image-jeanette" />
           <div class="customer__info">
             <p class="customer__name">Jeanette Harmon</p>
             <p class="customer__status">Verified Graduate</p>
           </div>
         </div>
-        <h2 class="testimonial__highlight">An overall wonderful and rewarding experience</h2>
-        <p class="testimonial__body">“ Thank you for the wonderful experience! I now have a job I really enjoy, and make a good living while doing something I love. ”</p>
-      </div>
-    </article>
-    <article>
-      <div class="testimonial flow style3">
+        <h2 class="testimonial__highlight">
+          An overall wonderful and rewarding experience
+        </h2>
+        <p class="testimonial__body">
+          “ Thank you for the wonderful experience! I now have a job I really
+          enjoy, and make a good living while doing something I love. ”
+        </p>
+      </article>
+
+      <!-- fourth testimonial -->
+      <article class="testimonial flow fourth">
         <div class="customer">
-          <img src="images/image-patrick.jpg" alt="image-patrick">
+          <img src="images/image-patrick.jpg" alt="image-patrick" />
           <div class="customer__info">
             <p class="customer__name">Patrick Abrams</p>
             <p class="customer__status">Verified Graduate</p>
           </div>
         </div>
-        <h2 class="testimonial__highlight">Awesome teaching support from TAs who did the bootcamp themselves. Getting guidance from them and learning from their experiences was easy.</h2>
-        <p class="testimonial__body">“ The staff seem genuinely concerned about my progress which I find really refreshing. The program gave me the confidence necessary to be able to go out in the world and present myself as a capable junior developer. The standard is above the rest. You will get the personal attention you need from an incredible community of smart and amazing people. ”</p>
-      </div>
-    </article>
-    <article>
-      <div class="testimonial flow style4">
+        <h2 class="testimonial__highlight">
+          Awesome teaching support from TAs who did the bootcamp themselves.
+          Getting guidance from them and learning from their experiences was
+          easy.
+        </h2>
+        <p class="testimonial__body">
+          “ The staff seem genuinely concerned about my progress which I find
+          really refreshing. The program gave me the confidence necessary to be
+          able to go out in the world and present myself as a capable junior
+          developer. The standard is above the rest. You will get the personal
+          attention you need from an incredible community of smart and amazing
+          people. ”
+        </p>
+      </article>
+
+      <!-- fifth testimonial -->
+      <article class="testimonial flow fifth">
         <div class="customer">
-          <img src="images/image-kira.jpg" alt="image-kira">
+          <img src="images/image-kira.jpg" alt="image-kira" />
           <div class="customer__info">
             <p class="customer__name">Kira Whittle</p>
             <p class="customer__status">Verified Graduate</p>
           </div>
-
         </div>
-        <h2 class="testimonial__highlight">Such a life-changing experience. Highly recommended!</h2>
-        <p class="testimonial__body">“ Before joining the bootcamp, I’ve never written a line of code. I needed some structure from professionals who can help me learn programming step by step. I was encouraged to enroll by a former student of theirs who can only say wonderful things about the program. The entire curriculum and staff did not disappoint. They were very hands-on and I never had to wait long for assistance. The agile team project, in particular, was outstanding. It took my learning to the next level in a way that no tutorial could ever have. In fact, I’ve often referred to it during interviews as an example of my developent experience. It certainly helped me land a job as a full-stack developer after receiving multiple offers. 100% recommend! ”</p>
-      </div>
-    </article>
-  </main>
-</body>
+        <h2 class="testimonial__highlight">
+          Such a life-changing experience. Highly recommended!
+        </h2>
+        <p class="testimonial__body">
+          “ Before joining the bootcamp, I’ve never written a line of code. I
+          needed some structure from professionals who can help me learn
+          programming step by step. I was encouraged to enroll by a former
+          student of theirs who can only say wonderful things about the program.
+          The entire curriculum and staff did not disappoint. They were very
+          hands-on and I never had to wait long for assistance. The agile team
+          project, in particular, was outstanding. It took my learning to the
+          next level in a way that no tutorial could ever have. In fact, I’ve
+          often referred to it during interviews as an example of my developent
+          experience. It certainly helped me land a job as a full-stack
+          developer after receiving multiple offers. 100% recommend! ”
+        </p>
+      </article>
+    </main>
+  </body>
 </html>
